<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_nav_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_hearth_black_24dp"
        android:title="@string/title_nav_favorites" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_nav_chat" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_nav_account" />

</menu>