<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.desapegaai.ui.home.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.desapegaai.ui.favorites.FavoritesFragment"
        android:label="@string/title_nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.desapegaai.ui.chatlist.ChatListFragment"
        android:label="@string/title_nav_chat"
        tools:layout="@layout/fragment_chatlist" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.desapegaai.ui.account.AccountFragment"
        android:label="@string/title_nav_account"
        tools:layout="@layout/fragment_account" />
</navigation>