<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newProduct.NewProductActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_new_product"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <LinearLayout
        android:id="@+id/formLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/radiusImageView"
            app:srcCompat="@drawable/default_product_image"
            app:strokeColor="@color/material_on_surface_disabled"
            android:alpha="0.5"
            app:strokeWidth="1dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_placeholder_input"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:prefixText="@string/currency_symbol"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/value_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_placeholder_input"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/description_text_input"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:hint="@string/description_placeholder_input"
                android:gravity="top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mapsButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_place_black_24dp"
            app:strokeColor="@color/material_on_surface_disabled"
            app:iconTint="@color/material_on_surface_emphasis_medium"
            app:iconPadding="10dp"
            app:iconGravity="textStart"
            android:textAlignment="viewStart"
            android:text="Rua João Pessoa Barroso, 00000-000"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/material_on_surface_emphasis_medium"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/publishButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/publish_button"/>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>